Backport of commit 29eb992 (Fix css rule to correctly hide combine fields when nested in a collapsed group)

--- a/css/inputEx.css
+++ b/css/inputEx.css
@@ -132,7 +132,8 @@ div.inputEx-Group fieldset.inputEx-Collapsed legend:hover div.inputEx-Group-coll
    background-position: -8px -397px;
 }
 
-div.inputEx-Group fieldset.inputEx-Collapsed div.inputEx-fieldWrapper {
+div.inputEx-Group fieldset.inputEx-Collapsed div.inputEx-fieldWrapper,
+div.inputEx-Group fieldset.inputEx-Collapsed div.inputEx-CombineField {
    display: none;
 }
 
